# tree-sitter-hcl

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  codegen.py  go.mod  grammar.js  make_grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  shell.nix  template.py  tree-sitter.json
.github/workflows/: acceptance.yaml  build.yaml  ci.yaml  fuzz.yaml  release.yaml
bindings/c/: tree-sitter-hcl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hcl/: __init__.py  binding.c  node_types.py  node_types.pyi
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHCL/: hcl.h
bindings/swift/TreeSitterHCLTests/: TreeSitterHCLTests.swift
bindings/swift/TreeSitterHclTests/: TreeSitterHclTests.swift
dialects/fabric/: grammar.js  package.json
dialects/fabric/src/: grammar.json  parser.c  scanner.c
dialects/terraform/: grammar.js  package-lock.json  package.json  tree-sitter.json
dialects/terraform/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
docs/: index.html  playground.js  tree-sitter-hcl.wasm
example/: example.hcl
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: attributes.txt  blocks.txt  collections.txt  comments.txt  conditionals.txt  expresssion.txt  for_expressions.txt  function_calls.txt  grafana_alloy_dots.txt  json.txt  literals.txt  operators.txt  real_world.txt  splat.txt  strings.txt  templates.txt
