[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-hcl"
description = "HCL and terraform grammar for tree-sitter"
version = "1.2.0"
keywords = ["incremental", "parsing", "tree-sitter", "hcl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.13"
license.text = "Apache-2.0"
readme = "README.md"
dependencies = [
    "tree-sitter>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/tree-sitter-grammars/tree-sitter-hcl"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
